--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "dependencies": {
     "bunyan": "^0.22.1",
+    "chalk": "^1.1.3",
+    "glob": "^7.0.3",
+    "mongoose": "^4.4.14",
     "restify": "~4.0.3"
   },
   "devDependencies": {
